--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dayjs": "^1.11.19",
     "framer-motion": "^12.34.3",
     "next": "16.1.6",
     "qrcode.react": "^4.2.0",
